<resources>
    <string name="app_name">Siemens Inventory</string>

    <!-- Menu Items -->

    <!-- Activities -->
    <string name="activities">Activities</string>
    <string name="borrow_device">My Borrowed Devices</string>
    <string name="return_device">Return Device</string>
    <string name="electric_revision">Electric Revision</string>
    <string name="inventory">Inventory</string>
    <string name="calibration">Calibration</string>
    <string name="user_permissions">User Permissions</string>

    <!-- Views -->
    <string name="views">Views</string>
    <string name="suppliers">Suppliers</string>
    <string name="departments">Departments</string>
    <string name="company_owners">Company Owners</string>
    <string name="projects">Projects</string>

    <string name="new_supplier">New Supplier</string>
    <string name="new_department">New Department</string>
    <string name="new_company_owner">New Company Owner</string>
    <string name="new_project">New Project</string>

    <!-- Others -->
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="email">Email</string>
    <string name="email_empty">"Email is empty or has incorrect format."</string>
    <string name="password">Password</string>
    <string name="password_empty">Password cannot be empty.</string>
    <string name="invalid_credentials">You have entered invalid credentials.</string>

    <!-- Change Password Activity -->
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="field_empty">Field cannot be empty.</string>
    <string name="new_pswd_not_equal">New passwords are not equal.</string>
    <string name="curr_new_pswds_same">Current password and New password cannot be the same.</string>

    <!-- Service Calling Messages -->
    <string name="able_to_save_changes">Changes are saved</string>
    <string name="unable_to_save_changes">Unable to save changes</string>
    <string name="unknown_error">"Unknown error occurred."</string>
    <string name="service_url_not_valid">"Service URL is not valid. Please specify service URL in settings."</string>
    <string name="error_cannot_connect_to_service">ERROR: Cannot connect to service. Please check connection parameters.</string>
    <string name="error_loading_data">Error loading data</string>

    <string name="home">Home</string>
    <string name="new_text">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="company_owner_was_removed">Company Owner was removed</string>
    <string name="project_was_removed">Project was removed</string>
    <string name="supplier_was_removed">Supplier was removed</string>
    <string name="department_was_removed">Department was removed</string>

    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="scan">Scan</string>
    <string name="port">Port</string>
    <string name="serviceUrl">Service URL</string>
    <string name="path">Path</string>
    <string name="httpMethod">HTTP Method</string>
    <string name="serviceSettings">Service settings</string>
    <string name="ipAddress">IP Address</string>
    <string name="testConnectionToService">Test Connection to Service</string>
    <string name="testConnection">Test Connection</string>
    <string name="others">Others</string>
    <string name="connection_parameters">Connection parameters</string>

    <string name="enter_manually">Enter manually</string>
    <string name="enter_serial_number">Enter serial number</string>
    <string name="enter_serial_or_barcode_number">Enter serial or barcode number</string>
    <string name="enter_device_type_name">Enter device type name</string>
    <string name="serial_number_empty">Serial number cannot be empty.</string>
    <string name="results">Results</string>
    <string name="no_results_found">No Results Found</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="find">Find</string>
    <string name="device">Device</string>
    <string name="devices">Devices</string>
    <string name="device_type_and_version">Device type &amp; version</string>
    <string name="profile">Profile</string>
    <string name="unable_to_scan">Unable to Scan Barcode / QR code. Try Manual Option.</string>

    <string name="select_calibration_date">Select Calibration Date</string>
    <string name="name">Name</string>
    <!-- Number Picker -->
    <string name="number_picker_formatter">%d</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="permissions">Permissions</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="passed_electric_revision">Passed electric revision?</string>
    <string name="inventory_device_present">Device present?</string>

    <string name="device_doesnt_exist">Device doesn\'t exist</string>
    <string name="device_with_barcode_not_found">Device with barcode %1$s not found</string>
    <string name="do_you_want_to_create_new_device">Device with barcode %1$s not found. Would you like to create new device?</string>
    <string name="name_cannot_be_empty">Entity name cannot be empty</string>
    <string name="entity_already_exists">Entity \'%1$s\' already exists.</string>

    <string name="device_borrowed_by_other_user">This device is borrowed by other user</string>
    <string name="borrow_device_question">Do you want to borrow this device?</string>
    <string name="borrow_return_device_question">Do you want to return this device?</string>
    <string name="currently_borrowed_devices">Currently borrowed devices</string>
    <string name="borrowed_devices">Borrowed devices</string>
    <string name="owner_borrowing">You cannot borrow devices you own</string>
    <string name="department">Department</string>
    <string name="project">Project</string>
    <string name="device_state">Device State</string>
    <string name="serial_number">Serial Number</string>
    <string name="default_location">Default Location</string>
    <string name="qr_code_value">QR Code Value</string>
    <string name="device_type">Device type</string>
    <string name="owner">Owner</string>
    <string name="inventory_number">Inventory Number</string>
    <string name="company_owner">Company Owner</string>
    <string name="add_date">Add date</string>
    <string name="wrong_date">Date cannot be in the future</string>
    <string name="nst">NST</string>
    <string name="comment">Comment</string>
    <string name="status">Status</string>
    <string name="close">Close</string>
    <string name="current_holder">Current Holder</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="unclear">Unclear</string>
    <string name="false_string">False</string>
    <string name="inventory_result">Inventory result</string>
    <string name="inventory_comment">Inventory comment</string>
    <string name="inventory_comment_cannot_be_empty">Inventory comment cannot be empty</string>
    <string name="last_revision_date">Last Revision Date</string>
    <string name="next_revision_date">Next Revision Date</string>
    <string name="new_revision_date">New Revision Date</string>
    <string name="revision_period">Revision Period</string>
    <string name="year_s">year(s)</string>
    <string name="edit_device">Edit Device</string>
    <string name="no_device_found">No Device Found</string>
    <string name="last_calibration_date">Last Calibration Date</string>
    <string name="next_calibration_date">Next Calibration Date</string>
    <string name="calibration_period">Calibration Period</string>
    <string name="new_calibration_date">New Calibration Date</string>
    <string name="calibration_days_left">Calibration Days Left</string>
    <string name="revision_days_left">Revision Days Left</string>
    <string name="siemens_inventory">Siemens Inventory</string>
    <string name="no_permission_to_access_this_resource">You don\'t have required permissions to access this resource</string>
    <string name="device_types">Device Types</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="order_number">Order Number</string>
    <string name="version">Version</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="classification">Classification</string>
    <string name="unauthorized_to_perform_this_action">You are unauthorized to perform this action</string>
    <string name="access_denied">Access Denied</string>

    <string name="clientId">Client Id</string>
    <string name="clientSecret">Client Secret</string>
    <string name="connection_successful">Connection is successful!</string>
    <string name="connection_not_successful">Connection is not successful!</string>
</resources>
