<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan" />
    </group>

    <item android:title="@string/views">
        <menu>
            <item
                android:id="@+id/nav_suppliers"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/suppliers" />
            <item
                android:id="@+id/nav_departments"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/departments" />
            <item
                android:id="@+id/nav_company_owners"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/company_owners" />
            <item
                android:id="@+id/nav_project"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/projects" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
