<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/serviceSettings">

        <ListPreference
            android:key="httpMethod"
            android:entries="@array/httpMethods"
            android:entryValues="@array/httpMethods"
            android:title="@string/httpMethod"
            android:defaultValue="http"/>

        <EditTextPreference
            android:key="baseUrl"
            android:inputType="textUri"
            android:title="@string/ipAddress"/>

        <EditTextPreference
            android:key="port"
            android:inputType="number"
            android:title="@string/port"
            android:defaultValue="8080"/>

        <EditTextPreference
            android:key="path"
            android:inputType="text"
            android:title="@string/path"
            android:defaultValue="/inventory-service/api/v1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="OAuth parameters">

        <EditTextPreference
            android:key="clientId"
            android:inputType="textPassword"
            android:title="@string/clientId"/>

        <EditTextPreference
            android:key="clientSecret"
            android:inputType="textPassword"
            android:title="@string/clientSecret"
            android:summary=""/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/testConnection">
                <Preference
                    android:key="serviceUrl"
            android:id="@+id/resultServiceUrlTextView"
            android:selectable="false"
            android:title="@string/serviceUrl"
            android:summary="http://192.168.130.1:8080/rest/"/>

        <Preference android:title="@string/testConnectionToService"
            android:key="testConnectionToService"/>
    </PreferenceCategory>

</PreferenceScreen>
