<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="5dp"
    tools:showIn="@layout/activity_device_create">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/device_borrow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/borrow_device"/>

        <Button
            android:id="@+id/device_return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/return_device"/>

        <Button
            android:id="@+id/device_borrow_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>