<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="15dp"
    android:visibility="gone"
    android:layout_alignParentBottom="true"
    tools:showIn="@layout/activity_device">

    <TextView
        android:id="@+id/device_generic_question_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/inventory_device_present" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/device_passed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/yes" />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/device_failed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>