<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/device_list_item_device_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Apple iPhone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qr_code_value"/>
        <TextView
            android:id="@+id/device_list_item_barcode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="826389"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/serial_number"/>
        <TextView
            android:id="@+id/device_list_item_serial_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SN018826389"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_location"/>
        <TextView
            android:id="@+id/device_list_item_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lab n.1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/owner"/>
        <TextView
            android:id="@+id/device_list_item_owner_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thomas Brown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_holder"/>
        <TextView
            android:id="@+id/device_list_item_holder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eddie Johnson"/>
    </LinearLayout>
</LinearLayout>