<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/borrowed_device_item_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Apple iPhone, Version: 5s"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/serial_number"/>
        <TextView
            android:id="@+id/borrowed_device_item_serial_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IE458881818"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/project"/>
        <TextView
            android:id="@+id/borrowed_device_item_project_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RoboLab"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/department"/>
        <TextView
            android:id="@+id/borrowed_device_item_department_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CVUT-FIT-SI"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/device_state"/>
        <TextView
            android:id="@+id/borrowed_device_item_device_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="funkcni"/>
    </LinearLayout>
</LinearLayout>