<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/el_revision_item_state_iv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_a700_24dp"/>
        <TextView
            android:id="@+id/el_revision_item_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Apple iPhone (S8489S5DG8)"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/revision_days_left"/>
        <TextView
            android:id="@+id/el_revision_item_days_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="127"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/revision_period"/>
        <TextView
            android:id="@+id/el_revision_item_period_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4 years"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_revision_date"/>
        <TextView
            android:id="@+id/el_revision_last_revision_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13.03.1993"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_revision_date"/>
        <TextView
            android:id="@+id/el_revision_next_revision_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13.03.1993"/>
    </LinearLayout>
</LinearLayout>